we are changing

--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-    <p>I'm a newborn HTML test</p>
-    <h1><b>Kill Me!</b></h1>
+    <h1><b>Hello Coursera</b></h1>
     <p>Don't be upsetti, have some spagetti</p>
 </body>
 </html>
