--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Hello Coursera</title>
 </head>
 <body>
     <h1><b>Hello Coursera</b></h1>
