--- a/Assigment2/index.html
+++ b/Assigment2/index.html
@@ -1,10 +1,45 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>My assigment - mod 2</title>
+<link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
+<h1>Our Menu</h1>
+
+<div class="row">
+  <div class="col-lg-4 col-md-6 col-sm-12">
+    <section>
+      <p class="titleOfSection">Chicken</p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque magna nunc, cursus non ipsum vel, tincidunt sollicitudin nulla. Proin at dictum tortor, vestibulum vehicula mi. Nullam suscipit massa eget blandit pretium.
+      In vel viverra nisl. Curabitur dignissim maximus tellus nec semper.
+      Integer et sollicgit pushitudin lectus, sed sodales massa.
+      Quisque neque erat, ultricies a mattis eget, semper eget dui.
+    </section>
+  </div>
+  <div class="col-lg-4 col-md-6 col-sm-12">
+    <section>
+      <p class="titleOfSection">Beef </p>
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque magna nunc, cursus non ipsum vel, tincidunt sollicitudin nulla. Proin at dictum tortor, vestibulum vehicula mi. Nullam suscipit massa eget blandit pretium.
+      In vel viverra nisl. Curabitur dignissim maximus tellus nec semper.
+      Integer et sollicitudin lectus, sed sodales massa.
+      Quisque neque erat, ultricies a mattis eget, semper eget dui.
+    </section>
+  </div>
+  <div class="col-lg-4 col-md-12 col-sm-12">
+    <section>
+    <p class="titleOfSection">Sushi</p>
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque magna nunc, cursus non ipsum vel, tincidunt sollicitudin nulla. Proin at dictum tortor, vestibulum vehicula mi. Nullam suscipit massa eget blandit pretium.
+      In vel viverra nisl. Curabitur dignissim maximus tellus nec semper.
+      Integer et sollicitudin lectus, sed sodales massa.
+      Quisque neque erat, ultricies a mattis eget, semper eget dui.
+    </section>
+
+  </div>
+</div>
 
 </body>
 </html>
